add matTooltip; add timepoints to patient page

--- a/sample-viewer/src/app/patient-page/patient-samples/patient-samples.component.html
+++ b/sample-viewer/src/app/patient-page/patient-samples/patient-samples.component.html
@@ -1,8 +1,6 @@
 <h4 class="patient" id="samples">Samples</h4>
 
-<ng-container *ngIf="patient.associatedSamples; else nodata">
-  <span *ngFor="let timepoint of patient.associatedSamples"> {{ timepoint }}</span>
-</ng-container>
+<app-patient-timepoints [alternateIDs]="patient.alternateIdentifier"></app-patient-timepoints>
 
 <ng-template #nodata>
   <span class="nodata">no known samples</span>
