--- a/sample-viewer/src/app/patient-page/patient-samples/patient-samples.component.html
+++ b/sample-viewer/src/app/patient-page/patient-samples/patient-samples.component.html
@@ -1,4 +1,4 @@
-<h4 class="patient" id="samples">Samples</h4>
+<h4 class="patient patient-samples" id="samples">Samples</h4>
 
 <app-patient-timepoints [alternateIDs]="patient.alternateIdentifier"></app-patient-timepoints>
 
