--- a/sample-viewer/src/app/patient/patient-timepoints/patient-timepoints.component.scss
+++ b/sample-viewer/src/app/patient/patient-timepoints/patient-timepoints.component.scss
@@ -6,6 +6,7 @@
   margin-bottom: 10px;
   border: 1px solid $grey-200;
   padding: 5px;
+  cursor: pointer;
 
   &:hover {
     background: lighten($cvisb-bright, 45%);
@@ -13,5 +14,5 @@
 }
 
 .sample-timepoints {
-  max-width: 250px;
+  max-width: 300px;
 }
