update location css

--- a/sample-viewer/src/app/filters/filter-location/filter-location.component.html
+++ b/sample-viewer/src/app/filters/filter-location/filter-location.component.html
@@ -2,7 +2,7 @@
   <h4 class="filter-label">location</h4>
 
   <div *ngFor="let ctry of countries" (click)="selectCountry(ctry.term)" class="location mat-shadow" [ngClass]="ctry.term">
-    <div [ngClass]="{'disabled': ctry.count === 0}">
+    <div class="container" [ngClass]="{'disabled': ctry.count === 0}">
       <svg-icon [icon]="ctry.term" [class]="ctry.term + '-icon'" *ngIf="ctry.term !== 'unknown'"></svg-icon>
       <mat-icon *ngIf="ctry.term === 'unknown'" [ngClass]="ctry.term + '-icon'">help_outline</mat-icon>
 
