--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.html
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.html
@@ -7,7 +7,7 @@
 
     <!-- ID Column -->
     <ng-container matColumnDef="patientID">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">ID</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">public ID</th>
       <td mat-cell *matCellDef="let element" class="patient-id">
         {{ element.patientID }}
       </td>
