--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="filter-item filter-elisas">
-    <app-filter-elisas></app-filter-elisas>
+    <app-filter-elisas endpoint='patient'></app-filter-elisas>
   </div>
 
   <div class="filter-item filter-dates">
