--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -35,7 +35,7 @@
   </div> -->
 
   <!-- <div class="filter-item filter-elisas">
-    <app-filter-elisas></app-filter-elisas>
+    <app-filter-elisas endpoint='sample'></app-filter-elisas>
   </div> -->
 
   <!-- <div class="filter-item filter-dates">
