--- a/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.scss
+++ b/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.scss
@@ -25,3 +25,23 @@ th {
   height: 1.25em;
   font-weight: 300;
 }
+
+.form-selector {
+  margin-right: 15px;
+}
+
+#elisa-virus {
+  width: 130px;
+}
+
+#elisa-assay {
+  width: 140px;
+}
+
+#elisa-result {
+  width: 150px;
+}
+
+#elisa-timepoint {
+  width: 150px;
+}
