temp remove ELISA filtering, till backend queries sorted

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -23,9 +23,9 @@
     <app-filter-patient-type [viruses]="patientSummary.patientTypes" [outcomes]="patientSummary.patientOutcomes" [all_cohorts]="all_cohorts" [all_outcomes]="all_outcomes" endpoint="patient"></app-filter-patient-type>
   </div>
 
-  <div class="filter-item filter-elisas">
+  <!-- <div class="filter-item filter-elisas">
     <app-filter-elisas endpoint='patient'></app-filter-elisas>
-  </div>
+  </div> -->
 
   <div class="filter-item filter-dates">
     <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="all_years" endpoint="patient"></app-filter-sample-year>
