--- a/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
+++ b/sample-viewer/src/app/patient-page/patient-citations/patient-citations.component.html
@@ -2,6 +2,6 @@
   Citations
 </div>
 
-<ng-template #no_citations>
-  No known citations
+<ng-template #no_citations class="nodata">
+  No known publications
 </ng-template>
