--- a/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
+++ b/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
@@ -49,10 +49,12 @@
     </table>
 
 
-    <ng-template #no_data class="nodata">
-      <p>
-        no available data
-      </p>
-    </ng-template>
-
   </div>
+
+  <ng-template #no_data class="nodata">
+    <p>
+      no available data
+    </p>
+  </ng-template>
+
+</div>
