--- a/sample-viewer/src/app/patient/patient-timepoints/patient-timepoints.component.html
+++ b/sample-viewer/src/app/patient/patient-timepoints/patient-timepoints.component.html
@@ -7,6 +7,6 @@
   </div>
 </div>
 
-<ng-template #nodata>
+<ng-template #no_data>
   <span class="nodata" ngIf="showMissing">no known samples</span>
 </ng-template>
