--- a/sample-viewer/src/app/patient/patient-timepoints/patient-timepoints.component.html
+++ b/sample-viewer/src/app/patient/patient-timepoints/patient-timepoints.component.html
@@ -1,14 +1,12 @@
-<div>
-<div class="container sample-timepoints" *ngIf="samples.length > 0; else no_data">
-  <div class="sample" *ngFor="let sample of samples" [matTooltip]="sample.sampleType + ' sample at ' + sample.sampleGroup + ' timepoint ' + sample.visitCode" (click)="showSampleMD($event, sample)">
-    <span class="sample-type">{{ sample.sampleType }}</span> -
-    <span class="sample-timepoint">
+  <div class="container sample-timepoints" *ngIf="samples.length > 0; else no_data">
+    <div class="sample" *ngFor="let sample of samples" [matTooltip]="sample.sampleType + ' sample at ' + sample.sampleGroup + ' timepoint ' + sample.visitCode" (click)="showSampleMD($event, sample)">
+      <span class="sample-type">{{ sample.sampleType }}</span> -
+      <span class="sample-timepoint">
       {{ sample.sampleGroup === "acute" ? "G" : "S"}}{{ sample.visitCode }}
     </span>
+    </div>
   </div>
-</div>
 
-<ng-template #no_data>
-  <span class="nodata" ngIf="showMissing">no known samples</span>
-</ng-template>
-</div>
+  <ng-template #no_data>
+    <span class="nodata" *ngIf="showMissing">no known samples</span>
+  </ng-template>
