--- a/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.scss
+++ b/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.scss
@@ -17,15 +17,24 @@
   font-weight: 400;
 }
 
-th.mat-header-cell, .mat-cell {
-    text-align: center;
-    min-width: 50px;
+.mat-cell,
+th.mat-header-cell {
+  text-align: center;
+  min-width: 50px;
 }
 
-td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:first-of-type {
-  padding-left: 0px !important;
+td.mat-cell:first-of-type,
+td.mat-footer-cell:first-of-type,
+th.mat-header-cell:first-of-type {
+  padding-left: 0 !important;
 }
 
-td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type, th.mat-header-cell:last-of-type {
-     padding-right: 0px !important;
+td.mat-cell:last-of-type,
+td.mat-footer-cell:last-of-type,
+th.mat-header-cell:last-of-type {
+  padding-right: 0 !important;
+}
+
+.patient-elisa {
+  margin-bottom: 10px !important;
 }
