add dateRange pipe

--- a/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
+++ b/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="infection-year" [ngClass]="patient.cohort">
-      {{ patient.infectionYear ? (patient.infectionYear.gte | date: "y") : "date unknown"}}
+      {{ patient.infectionYear ? (patient.infectionYear | dateRange: "y") : "date unknown"}}
     </div>
   </div>
 
@@ -19,17 +19,17 @@
       <div id="infection-date">
         <span class="variable-label">onset of symptoms:
         </span>
-        <span class="variable-value">{{ patient.infectionDate ? (patient.infectionDate | date: "d MMMM y") : "unknown"}}</span>
+        <span class="variable-value" [ngClass]="{'nodata': patient.infectionDate}">{{ patient.infectionDate ? (patient.infectionDate | dateRange) : "unknown"}}</span>
       </div>
 
       <div id="evaluation-date">
         <span class="variable-label">hospital evaluation:</span>
-        <span class="variable-value">{{ patient.evalDate ? (patient.evalDate | date: "d MMMM y") : "unknown"}}</span>
+        <span class="variable-value" [ngClass]="{'nodata': patient.evalDate}">{{ patient.evalDate ? (patient.evalDate | dateRange) : "unknown"}}</span>
       </div>
 
       <div id="discharge-date">
         <span class="variable-label">hospital discharge:</span>
-        <span class="variable-value">{{ patient.dischargeDate ? (patient.dischargeDate | date: "d MMMM y") : "unknown"}}</span>
+        <span class="variable-value" [ngClass]="{'nodata': patient.dischargeDate}">{{ patient.dischargeDate ? (patient.dischargeDate | dateRange) : "unknown"}}</span>
       </div>
 
     </div>
@@ -39,20 +39,20 @@
 
       <ng-container *ngIf="patient.outcome !== 'contact'">
         <div id="days-onset">
-          <span class="variable-label">onset of symptoms:
+          <span class="variable-label">days onset:
         </span>
-          <span class="variable-value">{{ patient.daysOnset ? (patient.daysOnset + " days") : "unknown"}}</span>
+          <span class="variable-value" [ngClass]="{'nodata': patient.daysOnset}">{{ patient.daysOnset ? (patient.daysOnset + " days") : "unknown"}}</span>
         </div>
 
         <div id="evaluation-date">
           <span class="variable-label">days in hospital:</span>
-          <span class="variable-value">{{ patient.daysInHospital ? patient.daysInHospital : "unknown"}}</span>
+          <span class="variable-value" [ngClass]="{'nodata': patient.daysInHospital}">{{ patient.daysInHospital ? patient.daysInHospital : "unknown"}}</span>
         </div>
       </ng-container>
 
       <div id="discharge-date">
         <span class="variable-label">outcome:</span>
-        <span class="variable-value">{{ patient.outcome ? patient.outcome : "unknown"}}</span>
+        <span class="variable-value" [ngClass]="{'nodata': patient.outcome}">{{ patient.outcome ? patient.outcome : "unknown"}}</span>
       </div>
 
     </div>
