--- a/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
+++ b/sample-viewer/src/app/patient-page/patient-dates/patient-dates.component.html
@@ -19,17 +19,17 @@
       <div id="infection-date">
         <span class="variable-label">onset of symptoms:
         </span>
-        <span class="variable-value" [ngClass]="{'nodata': patient.infectionDate}">{{ patient.infectionDate ? (patient.infectionDate | dateRange) : "unknown"}}</span>
+        <span class="variable-value" [ngClass]="{'nodata': patient.infectionDate}">{{ patient.infectionDate ? (patient.infectionDate | dateRange: "d MMMM y") : "unknown"}}</span>
       </div>
 
       <div id="evaluation-date">
         <span class="variable-label">hospital evaluation:</span>
-        <span class="variable-value" [ngClass]="{'nodata': patient.evalDate}">{{ patient.evalDate ? (patient.evalDate | dateRange) : "unknown"}}</span>
+        <span class="variable-value" [ngClass]="{'nodata': patient.evalDate}">{{ patient.evalDate ? (patient.evalDate | dateRange: "d MMMM y") : "unknown"}}</span>
       </div>
 
       <div id="discharge-date">
         <span class="variable-label">hospital discharge:</span>
-        <span class="variable-value" [ngClass]="{'nodata': patient.dischargeDate}">{{ patient.dischargeDate ? (patient.dischargeDate | dateRange) : "unknown"}}</span>
+        <span class="variable-value" [ngClass]="{'nodata': patient.dischargeDate}">{{ patient.dischargeDate ? (patient.dischargeDate | dateRange: "d MMMM y") : "unknown"}}</span>
       </div>
 
     </div>
