--- a/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
+++ b/sample-viewer/src/app/sample/sample-table/sample-table.component.scss
@@ -1,5 +1,5 @@
-@import '../../sass/variables';
-@import '../../sass/material-theme';
+@import '../../../sass/variables';
+@import '../../../sass/material-theme';
 
 .rotate-clockwise {
   -webkit-transform: rotate(90deg);
