minor css updates

--- a/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
+++ b/sample-viewer/src/app/patient/patient-table/patient-table.component.scss
@@ -1,6 +1,7 @@
 @import "../../../sass/variables.scss";
-@import "../../../sass/material-theme.scss"; // --- table ---
+@import "../../../sass/material-theme.scss";
 
+// --- table ---
 .mat-cell,
 .mat-header-cell {
   padding: 15px;
